test/tests/stages/9_functions/valid/arguments_in_registers/parameter_shadows_own_function.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[26]:
  int
  identifier(a)
  (
  int
  identifier(a)
  )
  {
  return
  identifier(a)
  *
  const int(2)
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(a)
  (
  const int(1)
  )
  ;
  }
