test/tests/stages/9_functions/invalid_declarations/extra_credit/call_label_as_function.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[27]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(x)
  =
  const int(1)
  ;
  identifier(a)
  :
  identifier(x)
  =
  identifier(x)
  +
  const int(1)
  ;
  identifier(a)
  (
  )
  ;
  return
  identifier(x)
  ;
  }
